@@ -305,8 +305,8 @@
 				from strike
 				where strike.judge = judge.id 
 				and strike.type = \"time\"
-				and strike.start < timeslot.end 		
-				and strike.end > timeslot.start ) 	
+				and strike.start <= timeslot.end 		
+				and strike.end >= timeslot.start ) 	
 
 				";
 
@@ -827,6 +827,7 @@
 
 		} elsif (not defined $stealable) { 
 
+
 			$sql_from_hell .= "
 				and not exists ( 		
 					select bt.id from panel as pt,ballot as bt,timeslot as tt, round as rt
@@ -834,13 +835,20 @@
 					and tt.end > timeslot.start
 					and tt.id = rt.timeslot
 					and rt.id = pt.round
-					and pt.flight = panel.flight
 					and pt.id = bt.panel
 					and bt.judge = judge.id )
 				and not exists ( 		
 					select bt.id from panel as pt,ballot as bt
 					where pt.round = panel.round
 					and pt.flight = panel.flight
+					and pt.id = bt.panel
+					and bt.judge = judge.id )
+				and not exists ( 		
+					select bt.id from panel as pt,ballot as bt,timeslot as tt, round as rt
+					where tt.start = timeslot.start
+					and tt.end = timeslot.end
+					and tt.id = rt.timeslot
+					and rt.id = pt.round
 					and pt.id = bt.panel
 					and bt.judge = judge.id )
 			";
