@@ -2705,6 +2705,26 @@ way to fit your requirements.
 .ui-timepicker-table td { padding: 0.1em; width: 2.2em; }
 .ui-timepicker-table th.periods { padding: 0.1em; width: 2.2em; }
 
+.ui-timepicker-table th.periods.periodPM { 
+	color      : #D8DCDF;
+	background : #004276;
+	border     : 2px solid #fff;
+}
+
+.hour12 .ui-state-default, .hour13 .ui-state-default, .hour14 .ui-state-default, .hour15 .ui-state-default, .hour16 .ui-state-default, 
+.hour17 .ui-state-default, .hour18 .ui-state-default, .hour19 .ui-state-default, .hour20 .ui-state-default, .hour21 .ui-state-default, 
+.hour22 .ui-state-default, .hour23 .ui-state-default, .hour24 .ui-state-default { 
+	color      : #D8DCDF;
+	background : #004276;
+}
+
+.hour12 .ui-state-active, .hour13 .ui-state-active, .hour14 .ui-state-active, .hour15 .ui-state-active, .hour16 .ui-state-active, 
+.hour17 .ui-state-active, .hour18 .ui-state-active, .hour19 .ui-state-active, .hour20 .ui-state-active, .hour21 .ui-state-active, 
+.hour22 .ui-state-active, .hour23 .ui-state-active, .hour24 .ui-state-active { 
+	background :#c00;
+}
+
+
 /* span for disabled cells */
 .ui-timepicker-table td span {
 	display         : block;
