@@ -263,7 +263,7 @@
 	} #end of unless sort_by
 
 	unless ($didit) { 
-		$m->print("<p class=\"err\">Nothing was printed: Either you haven't assigned judges yet, or that event has no rounds in that timeslot, or something.</p>");
+		$m->print("<div class=\"blankfull\"><p class=\"err\">Nothing was printed: Either you haven't assigned judges yet, or all the judges are signed up for online ballots, or something.</p></div>");
 		$m->abort;
 	}
 
