@@ -27,7 +27,7 @@
 			</span>
 
 			<span class="third">
-				<select name="event_id" class="fixedsmall"> 
+				<select name="event_id" class="fixedmed"> 
 					<option value="all">
 						All Events
 					</option> 
@@ -42,7 +42,7 @@
 			</span> 
 
 			<span class="third rightalign">
-				<input  type="submit" value="Print" class="thin"> 
+				<input  type="submit" value="Print" > 
 			</span>
 
 			</form>
@@ -58,7 +58,7 @@
 			</span>
 
 			<span class="third">
-				<select name="event_id" class="fixedsmall"> 
+				<select name="event_id" class="fixedmed"> 
 					<option value="all">
 						All Events
 					</option> 
@@ -73,7 +73,7 @@
 			</span> 
 
 			<span class="third rightalign">
-				<input  type="submit" value="Print" class="thin"> 
+				<input  type="submit" value="Print" > 
 			</span>
 
 			</form>
@@ -89,7 +89,7 @@
 			</span>
 
 			<span class="third">
-				<select name="group_id" class="fixedsmall"> 
+				<select name="group_id" class="fixedmed"> 
 % 					foreach my $group ($tourn->judge_groups) { 
 						<option value="<% $group->id %>">
 							<% $group->name %>
@@ -100,7 +100,7 @@
 			</span> 
 
 			<span class="third rightalign">
-				<input  type="submit" value="Print" class="thin"> 
+				<input  type="submit" value="Print" > 
 			</span>
 
 			</form>
@@ -116,7 +116,7 @@
 			</span>
 
 			<span class="third">
-				<select name="event_id" class="fixedsmall"> 
+				<select name="event_id" class="fixedmed"> 
 					<option value="all">
 						All Events
 					</option> 
@@ -131,7 +131,7 @@
 			</span> 
 
 			<span class="third rightalign">
-				<input  type="submit" value="Print" class="thin"> 
+				<input  type="submit" value="Print" > 
 			</span>
 
 			</form>
