@@ -40,8 +40,8 @@
 
 			<span class="third">
 				<div class="uploader">
-					<input type="file" name="entries" style="opacity: 0;" onchange="uploaderName()" id="upload">
-					<span id="filename" class="filename" style="-webkit-user-select: none;">No file selected</span>
+					<input type="file" name="entries" style="opacity: 0;" onchange="uploaderName('entries', 'entries_file')" id="entries">
+					<span id="entries_file" class="filename" style="-webkit-user-select: none;">No file selected</span>
 					<span class="action" style="-webkit-user-select: none;">Choose File</span>
 				</div>
 			</span>
